# pythonk8s

./: .gitignore  README.md  pyproject.toml
k8s/: rabbitmq-deployment.yaml
pythonk8s/: pythonk8s.py
src/: app.py  pluginhost.py  rabbitmqhost.py
src/templates/: plugin-deployment.yml
