[tool.poetry]
name = "pythonk8s"
version = "0.1.0"
description = ""
authors = ["Tom <ttutko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kubernetes = "^30.1.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
